# deadline-chaser

./: .gitignore  README.md  dominio-banco.md  pyproject.toml
core/: agente.py  db.py  decisiones.py  enviar.py  excel_generator.py  gmail_client.py  lectura_respuestas.py  mensajes.py  queries.py  simulador.py  validador.py  zonas.py
scripts/: enviar_correos.py  evaluar_pendientes.py  generar_correos.py  job_diario.py  procesar_respuestas.py  simular_respuestas.py  test_connection.py  test_gmail.py
